added navigation, footer, font-awesome, bootstrap

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>       
+        <li class="active"><a href="index.html"><i class="fa fa-home fa-2x"></i> Home</a></li>
+        <li><a href="projects.html"><i class="fa fa-map-signs fa-2x"></i> Projects</a></li>
+        <li><a href="contact.html"><i class="fa fa-phone fa-2x"></i> Contact</a></li>       
       </ul>
       
     </div><!-- /.navbar-collapse -->
@@ -45,7 +45,11 @@
   </div>
 
   <!-- Footer Section -->
-
+  <nav class="navbar navbar-default navbar-fixed-bottom">
+    <div class="container">
+      <h4>&copy 2017 - All Rights Reserved</h4>
+    </div>
+  </nav>
   <!-- JavaScript Section -->
   <script src="./Scripts/lib/jquery/dist/jquery.min.js"></script>
   <script src="./Scripts/lib/bootstrap/dist/js/bootstrap.min.js"></script>
