--- a/index.html
+++ b/index.html
@@ -12,35 +12,37 @@
 </head>
 <body>
   <!-- Navigation Section -->
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="index.html">Logo goes here</a>
-    </div>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="index.html">Logo goes here</a>
+      </div>
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="index.html"><i class="fa fa-home fa-2x"></i> Home</a></li>
-        <li><a href="projects.html"><i class="fa fa-map-signs fa-2x"></i> Projects</a></li>
-        <li><a href="contact.html"><i class="fa fa-phone fa-2x"></i> Contact</a></li>       
-      </ul>
-      
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="active"><a href="index.html"><i class="fa fa-home fa-2x"></i> Home</a></li>
+          <li><a href="projects.html"><i class="fa fa-map-signs fa-2x"></i> Projects</a></li>
+          <li><a href="contact.html"><i class="fa fa-phone fa-2x"></i> Contact</a></li>       
+        </ul>
+        
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </nav>
   <!-- Main Content -->
   <div class="container">
     <div class="row">
       <div class="col md-offset-3 col-md-6">
         <h1>COMP1073 - Lesson 2</h1></div>
+
+        <button id="clickMeButton" class="btn btn-primary">Click Me!</button>
     </div>
   </div>
 
