--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
   <!-- Main Content -->
   <div class="container">
     <div class="row">
-      <div class="col md-offset-3 col-md-6">
-        <h1>COMP1073 - Lesson 2</h1></div>
+      <div class="col md-offset-10 col-md-6">
+        <h1>COMP1073 - Lesson 2</h1>
+      </div>
 
         <button id="clickMeButton" class="btn btn-primary">Click Me!</button>
     </div>
