updated project to show lesson 3

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>COMP1073 - Lesson 2</title>
+  <title>COMP1073 - Lesson 3</title>
   <!-- CSS Section -->
   <link rel="stylesheet" href="./Scripts/lib/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./Scripts/lib/bootstrap/dist/css/bootstrap-theme.min.css">
@@ -22,7 +22,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">Logo goes here</a>
+        <a class="navbar-brand" href="index.html">My Portfolio</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
